Add security module and configuration for Houdinis framework
- Introduced a new security module with essential security features.
- Implemented centralized security configuration and validation methods.
- Added functions for hostname validation, port number validation, command input sanitization, and secure logging setup.
- Included quantum vulnerability assessment for cryptographic algorithms.
- Established secure file permissions and filename generation methods.
- Integrated logging for security-related events and actions.
- Ensured compliance with security best practices and standards.

--- a/notebooks/04-Quantum_Network_Scanning.ipynb
+++ b/notebooks/04-Quantum_Network_Scanning.ipynb
@@ -11,6 +11,35 @@
     "**License:** MIT  \n",
     "**Date:** August 7, 2025\n",
     "\n",
+    "---\n",
+    "\n",
+    "##  📚 Notebook Execution Order\n",
+    "\n",
+    "**This is Notebook #4 of 9**\n",
+    "\n",
+    "Recommended execution order:\n",
+    "\n",
+    "1. **IBM_Quantum_Experience_Integration.ipynb** ✅\n",
+    "2. **Shors_Algorithm_RSA_Exploitation.ipynb** ✅\n",
+    "3. **Grovers_Algorithm_Symmetric_Key_Attacks.ipynb** ✅\n",
+    "4. ✅ **Quantum_Network_Scanning.ipynb** ← YOU ARE HERE\n",
+    "5. **Harvest_Now_Decrypt_Later_Attacks.ipynb**\n",
+    "6. **Post_Quantum_Cryptography_Analysis.ipynb**\n",
+    "7. **Quantum_Machine_Learning_Cryptanalysis.ipynb**\n",
+    "8. **Houdinis_Advanced_Features.ipynb**\n",
+    "9. **Houdinis_Framework_Conclusion.ipynb**\n",
+    "\n",
+    "**Prerequisites:**\n",
+    "- Grover's algorithm understanding (Notebook #3)\n",
+    "- Docker containers configured\n",
+    "\n",
+    "**This notebook covers:**\n",
+    "- Quantum-enhanced network reconnaissance\n",
+    "- Grover's algorithm for port scanning\n",
+    "- Parallel quantum network discovery\n",
+    "\n",
+    "---\n",
+    "\n",
     "##  Overview\n",
     "\n",
     "Quantum-enhanced network scanning leverages quantum algorithms for advanced reconnaissance and vulnerability detection. This notebook explores:\n",
