--- a/notebooks/05-Harvest_Now_Decrypt_Later_Attacks.ipynb
+++ b/notebooks/05-Harvest_Now_Decrypt_Later_Attacks.ipynb
@@ -11,6 +11,36 @@
     "**License:** MIT  \n",
     "**Date:** August 7, 2025\n",
     "\n",
+    "---\n",
+    "\n",
+    "##  📚 Notebook Execution Order\n",
+    "\n",
+    "**This is Notebook #5 of 9**\n",
+    "\n",
+    "Recommended execution order:\n",
+    "\n",
+    "1. **IBM_Quantum_Experience_Integration.ipynb** ✅\n",
+    "2. **Shors_Algorithm_RSA_Exploitation.ipynb** ✅\n",
+    "3. **Grovers_Algorithm_Symmetric_Key_Attacks.ipynb** ✅\n",
+    "4. **Quantum_Network_Scanning.ipynb** ✅\n",
+    "5. ✅ **Harvest_Now_Decrypt_Later_Attacks.ipynb** ← YOU ARE HERE\n",
+    "6. **Post_Quantum_Cryptography_Analysis.ipynb**\n",
+    "7. **Quantum_Machine_Learning_Cryptanalysis.ipynb**\n",
+    "8. **Houdinis_Advanced_Features.ipynb**\n",
+    "9. **Houdinis_Framework_Conclusion.ipynb**\n",
+    "\n",
+    "**Prerequisites:**\n",
+    "- All previous quantum attack notebooks (#1-4)\n",
+    "- Understanding of Shor's and Grover's algorithms\n",
+    "\n",
+    "**This notebook covers:**\n",
+    "- HNDL attack strategy and timeline\n",
+    "- TLS/SSH traffic capture and storage\n",
+    "- Future decryption risk assessment\n",
+    "- Economic impact analysis\n",
+    "\n",
+    "---\n",
+    "\n",
     "##  Overview\n",
     "\n",
     "The \"Harvest Now, Decrypt Later\" strategy involves collecting encrypted data today for future decryption when quantum computers become capable enough. This notebook demonstrates:\n",
