--- a/notebooks/08-Houdinis_Advanced_Features.ipynb
+++ b/notebooks/08-Houdinis_Advanced_Features.ipynb
@@ -11,6 +11,37 @@
     "**License:** MIT  \n",
     "**Date:** August 6, 2025\n",
     "\n",
+    "---\n",
+    "\n",
+    "##  📚 Notebook Execution Order\n",
+    "\n",
+    "**This is Notebook #8 of 9**\n",
+    "\n",
+    "Recommended execution order:\n",
+    "\n",
+    "1. **IBM_Quantum_Experience_Integration.ipynb** ✅\n",
+    "2. **Shors_Algorithm_RSA_Exploitation.ipynb** ✅\n",
+    "3. **Grovers_Algorithm_Symmetric_Key_Attacks.ipynb** ✅\n",
+    "4. **Quantum_Network_Scanning.ipynb** ✅\n",
+    "5. **Harvest_Now_Decrypt_Later_Attacks.ipynb** ✅\n",
+    "6. **Post_Quantum_Cryptography_Analysis.ipynb** ✅\n",
+    "7. **Quantum_Machine_Learning_Cryptanalysis.ipynb** ✅\n",
+    "8. ✅ **Houdinis_Advanced_Features.ipynb** ← YOU ARE HERE\n",
+    "9. **Houdinis_Framework_Conclusion.ipynb**\n",
+    "\n",
+    "**Prerequisites:**\n",
+    "- ALL previous notebooks (#1-7) completed\n",
+    "- Comprehensive understanding of quantum attacks\n",
+    "- Docker containers fully configured\n",
+    "\n",
+    "**This notebook covers:**\n",
+    "- Integration of all Houdinis modules\n",
+    "- Advanced multi-algorithm attacks\n",
+    "- Real-world attack scenarios\n",
+    "- Framework optimization techniques\n",
+    "\n",
+    "---\n",
+    "\n",
     "##  Overview\n",
     "\n",
     "This comprehensive notebook demonstrates advanced quantum cryptographic exploitation techniques using the Houdinis framework. We'll explore:\n",
