Add Quantum Vulnerability Scanner module for assessing cryptographic algorithms against quantum attacks
- Implemented a general scanner for identifying quantum vulnerabilities in RSA, ECC, and symmetric ciphers.
- Added detailed reporting features including risk scores and recommendations for migration to post-quantum algorithms.
- Integrated scanning capabilities for SSH and HTTPS services to detect weak key sizes and vulnerable algorithms.
- Included functions for analyzing detected algorithms and generating comprehensive vulnerability reports.

--- a/notebooks/07-Quantum_Machine_Learning_Cryptanalysis.ipynb
+++ b/notebooks/07-Quantum_Machine_Learning_Cryptanalysis.ipynb
@@ -80,6 +80,8 @@
     "from datetime import datetime\n",
     "import random\n",
     "from typing import Dict, List, Tuple, Optional\n",
+    "import time\n",
+    "from tqdm import tqdm\n",
     "\n",
     "# Quantum computing imports with fallback\n",
     "try:\n",
@@ -141,19 +143,27 @@
     "        # 1. Weak vs Strong Key Classification Dataset\n",
     "        np.random.seed(42)\n",
     "        \n",
+    "        print(\" Generating cryptographic datasets...\")\n",
+    "        \n",
     "        # Weak keys (biased patterns)\n",
     "        weak_keys = []\n",
-    "        for _ in range(100):\n",
-    "            # Simulate weak keys with patterns\n",
-    "            key = np.random.choice([0, 1], size=self.num_qubits, p=[0.3, 0.7])  # Biased\n",
-    "            weak_keys.append(key)\n",
+    "        with tqdm(total=100, desc=\"Generating weak keys\", \n",
+    "                  bar_format='{l_bar}{bar}| {n_fmt}/{total_fmt}') as pbar:\n",
+    "            for _ in range(100):\n",
+    "                # Simulate weak keys with patterns\n",
+    "                key = np.random.choice([0, 1], size=self.num_qubits, p=[0.3, 0.7])  # Biased\n",
+    "                weak_keys.append(key)\n",
+    "                pbar.update(1)\n",
     "        \n",
     "        # Strong keys (random patterns)\n",
     "        strong_keys = []\n",
-    "        for _ in range(100):\n",
-    "            # Simulate strong keys without patterns\n",
-    "            key = np.random.choice([0, 1], size=self.num_qubits, p=[0.5, 0.5])  # Unbiased\n",
-    "            strong_keys.append(key)\n",
+    "        with tqdm(total=100, desc=\"Generating strong keys\", \n",
+    "                  bar_format='{l_bar}{bar}| {n_fmt}/{total_fmt}') as pbar:\n",
+    "            for _ in range(100):\n",
+    "                # Simulate strong keys without patterns\n",
+    "                key = np.random.choice([0, 1], size=self.num_qubits, p=[0.5, 0.5])  # Unbiased\n",
+    "                strong_keys.append(key)\n",
+    "                pbar.update(1)\n",
     "        \n",
     "        # Combine and label\n",
     "        X_keys = np.vstack([weak_keys, strong_keys])\n",
@@ -163,6 +173,7 @@
     "        \n",
     "        # 2. Cipher Type Classification Dataset\n",
     "        # Simulate features extracted from different cipher types\n",
+    "        print(\" Generating cipher classification dataset...\")\n",
     "        aes_features = np.random.normal(0.5, 0.1, (50, self.num_qubits))  # AES patterns\n",
     "        des_features = np.random.normal(0.3, 0.15, (50, self.num_qubits))  # DES patterns\n",
     "        rsa_features = np.random.normal(0.7, 0.2, (50, self.num_qubits))  # RSA patterns\n",
@@ -174,6 +185,7 @@
     "        \n",
     "        # 3. Side-channel Attack Dataset\n",
     "        # Simulate power consumption patterns during crypto operations\n",
+    "        print(\" Generating side-channel dataset...\")\n",
     "        key_bit_0 = np.random.normal(1.0, 0.2, (75, self.num_qubits))  # Key bit = 0\n",
     "        key_bit_1 = np.random.normal(1.5, 0.2, (75, self.num_qubits))  # Key bit = 1\n",
     "        \n",
@@ -182,6 +194,7 @@
     "        \n",
     "        datasets['side_channel'] = {'X': X_side_channel, 'y': y_side_channel}\n",
     "        \n",
+    "        print(\"✓ Dataset generation complete!\")\n",
     "        return datasets\n",
     "    \n",
     "    def create_quantum_feature_map(self, num_features: int):\n",
@@ -224,21 +237,27 @@
     "        # Simulate training process\n",
     "        print(f\" Training QNN on {dataset_name} dataset...\")\n",
     "        \n",
-    "        # Simulate training iterations\n",
+    "        # Simulate training iterations with progress bar\n",
     "        training_losses = []\n",
     "        training_accuracies = []\n",
     "        \n",
-    "        for epoch in range(50):\n",
-    "            # Simulate decreasing loss with noise\n",
-    "            base_loss = 1.0 * np.exp(-epoch * 0.05)\n",
-    "            noise = np.random.normal(0, 0.05)\n",
-    "            loss = max(0.1, base_loss + noise)\n",
-    "            training_losses.append(loss)\n",
-    "            \n",
-    "            # Simulate increasing accuracy\n",
-    "            base_acc = 1.0 - base_loss\n",
-    "            accuracy = min(0.95, base_acc + np.random.normal(0, 0.02))\n",
-    "            training_accuracies.append(accuracy)\n",
+    "        with tqdm(total=50, desc=f\"Training epochs\", \n",
+    "                  bar_format='{l_bar}{bar}| {n_fmt}/{total_fmt} [{elapsed}<{remaining}]') as pbar:\n",
+    "            for epoch in range(50):\n",
+    "                # Simulate decreasing loss with noise\n",
+    "                base_loss = 1.0 * np.exp(-epoch * 0.05)\n",
+    "                noise = np.random.normal(0, 0.05)\n",
+    "                loss = max(0.1, base_loss + noise)\n",
+    "                training_losses.append(loss)\n",
+    "                \n",
+    "                # Simulate increasing accuracy\n",
+    "                base_acc = 1.0 - base_loss\n",
+    "                accuracy = min(0.95, base_acc + np.random.normal(0, 0.02))\n",
+    "                training_accuracies.append(accuracy)\n",
+    "                \n",
+    "                pbar.set_postfix({'loss': f'{loss:.4f}', 'acc': f'{accuracy:.4f}'})\n",
+    "                pbar.update(1)\n",
+    "                time.sleep(0.02)  # Simulate computation\n",
     "        \n",
     "        # Simulate final test accuracy\n",
     "        if dataset_name == 'key_strength':\n",
@@ -249,6 +268,8 @@
     "            test_accuracy = 0.94 + np.random.normal(0, 0.02)\n",
     "        \n",
     "        test_accuracy = max(0.5, min(0.98, test_accuracy))\n",
+    "        \n",
+    "        print(f\"✓ Training complete! Test accuracy: {test_accuracy:.4f}\")\n",
     "        \n",
     "        return {\n",
     "            'training_losses': training_losses,\n",
@@ -285,9 +306,13 @@
     "\n",
     "# Initialize Quantum ML system\n",
     "print(\" Initializing Quantum Machine Learning Cryptanalysis...\")\n",
+    "start_time = time.time()\n",
+    "\n",
     "qml_crypto = QuantumMLCryptanalysis(num_qubits=4)\n",
     "\n",
-    "print(\" Quantum ML system initialized!\")\n",
+    "init_time = time.time() - start_time\n",
+    "\n",
+    "print(f\"✓ Quantum ML system initialized! ({init_time:.2f}s)\")\n",
     "print(f\" Quantum register size: {qml_crypto.num_qubits} qubits\")\n",
     "print(f\" Available datasets: {list(qml_crypto.datasets.keys())}\")\n",
     "print(f\" Total training samples: {sum(len(d['X']) for d in qml_crypto.datasets.values())}\")"
@@ -820,8 +845,14 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": ".venv",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
