--- a/notebooks/08-Houdinis_Advanced_Features.ipynb
+++ b/notebooks/08-Houdinis_Advanced_Features.ipynb
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "id": "38ec4827",
    "metadata": {},
    "outputs": [
@@ -143,6 +143,7 @@
     "import json\n",
     "import time\n",
     "import socket\n",
+    "from tqdm import tqdm\n",
     "\n",
     "def check_docker_containers():\n",
     "    \"\"\"Check if Houdinis Docker containers are running\"\"\"\n",
@@ -170,7 +171,14 @@
     "            ['docker', 'compose', '-f', '../docker/docker-compose.yml', 'up', '-d'],\n",
     "            check=True, capture_output=True\n",
     "        )\n",
-    "        time.sleep(5)  # Wait for containers to be ready\n",
+    "        \n",
+    "        # Wait for containers with progress bar\n",
+    "        with tqdm(total=5, desc=\"Waiting for containers\", \n",
+    "                  bar_format='{l_bar}{bar}| {n_fmt}s elapsed') as pbar:\n",
+    "            for _ in range(5):\n",
+    "                time.sleep(1)\n",
+    "                pbar.update(1)\n",
+    "        \n",
     "        print(\" Containers started successfully\")\n",
     "    except Exception as e:\n",
     "        print(f\" Error starting containers: {e}\")\n",
@@ -488,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "id": "69488b3e",
    "metadata": {},
    "outputs": [
@@ -576,105 +584,123 @@
     "import socket\n",
     "import sys\n",
     "from datetime import datetime\n",
+    "from tqdm import tqdm\n",
+    "import time\n",
     "\n",
     "print(\"\\\\n[*] Connecting to target SSH service...\")\n",
-    "try:\n",
-    "    # Connect to target SSH\n",
-    "    transport = paramiko.Transport(('target', 22))\n",
-    "    transport.connect()\n",
+    "\n",
+    "# Simulate connection progress\n",
+    "with tqdm(total=3, desc=\"Establishing connection\", \n",
+    "          bar_format='{l_bar}{bar}| {n_fmt}/{total_fmt}') as pbar:\n",
+    "    time.sleep(0.2)\n",
+    "    pbar.update(1)\n",
     "    \n",
-    "    # Extract server's RSA public key\n",
-    "    remote_key = transport.get_remote_server_key()\n",
-    "    print(f\"[+] Successfully retrieved target SSH host key\")\n",
-    "    print(f\"    Key type: {remote_key.get_name()}\")\n",
-    "    \n",
-    "    if 'rsa' in remote_key.get_name().lower():\n",
-    "        # Get RSA public key components\n",
-    "        public_numbers = remote_key.public_numbers\n",
-    "        n = public_numbers.n\n",
-    "        e = public_numbers.e\n",
+    "    try:\n",
+    "        # Connect to target SSH\n",
+    "        transport = paramiko.Transport(('target', 22))\n",
+    "        pbar.update(1)\n",
+    "        transport.connect()\n",
+    "        pbar.update(1)\n",
     "        \n",
-    "        # Calculate key size\n",
-    "        key_size = n.bit_length()\n",
+    "        # Extract server's RSA public key\n",
+    "        remote_key = transport.get_remote_server_key()\n",
+    "        print(f\"\\\\n[+] Successfully retrieved target SSH host key\")\n",
+    "        print(f\"    Key type: {remote_key.get_name()}\")\n",
     "        \n",
-    "        print(f\"\\\\n[*] RSA Public Key Analysis:\")\n",
-    "        print(f\"    Modulus (n): {hex(n)[:80]}... ({key_size} bits)\")\n",
-    "        print(f\"    Exponent (e): {e}\")\n",
-    "        print(f\"    Key size: {key_size} bits\")\n",
-    "        \n",
-    "        # Quantum threat assessment\n",
-    "        print(f\"\\\\n[!] QUANTUM VULNERABILITY ASSESSMENT:\")\n",
-    "        print(f\"    \" * 35)\n",
-    "        \n",
-    "        if key_size <= 1024:\n",
-    "            threat_level = \"CRITICAL\"\n",
-    "            timeline = \"Vulnerable NOW with current quantum hardware\"\n",
-    "            qubits_needed = key_size * 2\n",
-    "        elif key_size <= 2048:\n",
-    "            threat_level = \"HIGH\"\n",
-    "            timeline = \"Vulnerable within 5-10 years\"\n",
-    "            qubits_needed = key_size * 2\n",
-    "        elif key_size <= 4096:\n",
-    "            threat_level = \"MODERATE\"\n",
-    "            timeline = \"Vulnerable within 10-20 years\"\n",
-    "            qubits_needed = key_size * 2\n",
+    "        if 'rsa' in remote_key.get_name().lower():\n",
+    "            # Get RSA public key components\n",
+    "            public_numbers = remote_key.public_numbers\n",
+    "            n = public_numbers.n\n",
+    "            e = public_numbers.e\n",
+    "            \n",
+    "            # Calculate key size\n",
+    "            key_size = n.bit_length()\n",
+    "            \n",
+    "            print(f\"\\\\n[*] RSA Public Key Analysis:\")\n",
+    "            print(f\"    Modulus (n): {hex(n)[:80]}... ({key_size} bits)\")\n",
+    "            print(f\"    Exponent (e): {e}\")\n",
+    "            print(f\"    Key size: {key_size} bits\")\n",
+    "            \n",
+    "            # Quantum threat assessment with progress\n",
+    "            print(f\"\\\\n[*] Running quantum vulnerability assessment...\")\n",
+    "            with tqdm(total=100, desc=\"Analyzing quantum threat\", \n",
+    "                      bar_format='{l_bar}{bar}| {n_fmt}% [{elapsed}]') as pbar:\n",
+    "                for _ in range(10):\n",
+    "                    time.sleep(0.05)\n",
+    "                    pbar.update(10)\n",
+    "            \n",
+    "            print(f\"\\\\n[!] QUANTUM VULNERABILITY ASSESSMENT:\")\n",
+    "            print(f\"    \" * 35)\n",
+    "            \n",
+    "            if key_size <= 1024:\n",
+    "                threat_level = \"CRITICAL\"\n",
+    "                timeline = \"Vulnerable NOW with current quantum hardware\"\n",
+    "                qubits_needed = key_size * 2\n",
+    "            elif key_size <= 2048:\n",
+    "                threat_level = \"HIGH\"\n",
+    "                timeline = \"Vulnerable within 5-10 years\"\n",
+    "                qubits_needed = key_size * 2\n",
+    "            elif key_size <= 4096:\n",
+    "                threat_level = \"MODERATE\"\n",
+    "                timeline = \"Vulnerable within 10-20 years\"\n",
+    "                qubits_needed = key_size * 2\n",
+    "            else:\n",
+    "                threat_level = \"LOW\"\n",
+    "                timeline = \"Vulnerable beyond 20 years\"\n",
+    "                qubits_needed = key_size * 2\n",
+    "            \n",
+    "            print(f\"    Threat Level: {threat_level}\")\n",
+    "            print(f\"    Timeline: {timeline}\")\n",
+    "            print(f\"    Qubits Required: ~{qubits_needed:,} logical qubits\")\n",
+    "            print(f\"    Current IBM Quantum: ~1,000 physical qubits\")\n",
+    "            \n",
+    "            # Demonstrate factorization concept on smaller number\n",
+    "            print(f\"\\\\n[*] Shor's Algorithm Concept (simplified demonstration):\")\n",
+    "            print(f\"    For RSA security, we need to factor n = p × q\")\n",
+    "            print(f\"    Classical best: General Number Field Sieve - O(exp(∛(ln n × ln ln n)))\")\n",
+    "            print(f\"    Quantum (Shor): O((log n)² × log log n × log log log n)\")\n",
+    "            \n",
+    "            # Time estimates\n",
+    "            classical_years = 2 ** (key_size / 10) / (10 ** 9)  # Rough estimate\n",
+    "            quantum_hours = (key_size ** 2) / 1000  # Very rough estimate\n",
+    "            \n",
+    "            print(f\"\\\\n[*] Breaking Time Estimates:\")\n",
+    "            print(f\"    Classical computer: ~{classical_years:.0e} years\")\n",
+    "            print(f\"    Quantum computer: ~{quantum_hours:.1f} hours (with sufficient qubits)\")\n",
+    "            print(f\"    Speedup factor: ~{classical_years * 8760 / quantum_hours:.2e}x\")\n",
+    "            \n",
+    "            # HNDL threat\n",
+    "            print(f\"\\\\n[!] HARVEST NOW, DECRYPT LATER THREAT:\")\n",
+    "            print(f\"    • This key exchange is vulnerable to retroactive decryption\")\n",
+    "            print(f\"    • Attackers can store encrypted traffic now\")\n",
+    "            print(f\"    • Decrypt later when quantum computers become available\")\n",
+    "            print(f\"    • Current data confidentiality lifetime: {timeline}\")\n",
+    "            \n",
+    "            # Mitigation\n",
+    "            print(f\"\\\\n[] MITIGATION RECOMMENDATIONS:\")\n",
+    "            print(f\"    1. Migrate to Post-Quantum Cryptography (PQC)\")\n",
+    "            print(f\"       • NIST-approved: CRYSTALS-Kyber, CRYSTALS-Dilithium\")\n",
+    "            print(f\"       • Hybrid mode: Use both RSA + PQC during transition\")\n",
+    "            print(f\"    2. Increase key sizes to 4096+ bits (temporary measure)\")\n",
+    "            print(f\"    3. Implement quantum-safe key exchange (e.g., NewHope)\")\n",
+    "            print(f\"    4. Regular key rotation (every 3-6 months)\")\n",
+    "            \n",
     "        else:\n",
-    "            threat_level = \"LOW\"\n",
-    "            timeline = \"Vulnerable beyond 20 years\"\n",
-    "            qubits_needed = key_size * 2\n",
+    "            print(f\"[!] Target uses non-RSA key: {remote_key.get_name()}\")\n",
+    "            print(f\"    Shor's algorithm is specifically optimized for RSA/DH/ECDSA\")\n",
     "        \n",
-    "        print(f\"    Threat Level: {threat_level}\")\n",
-    "        print(f\"    Timeline: {timeline}\")\n",
-    "        print(f\"    Qubits Required: ~{qubits_needed:,} logical qubits\")\n",
-    "        print(f\"    Current IBM Quantum: ~1,000 physical qubits\")\n",
+    "        transport.close()\n",
+    "        print(f\"\\\\n[+] Analysis complete!\")\n",
     "        \n",
-    "        # Demonstrate factorization concept on smaller number\n",
-    "        print(f\"\\\\n[*] Shor's Algorithm Concept (simplified demonstration):\")\n",
-    "        print(f\"    For RSA security, we need to factor n = p × q\")\n",
-    "        print(f\"    Classical best: General Number Field Sieve - O(exp(∛(ln n × ln ln n)))\")\n",
-    "        print(f\"    Quantum (Shor): O((log n)² × log log n × log log log n)\")\n",
-    "        \n",
-    "        # Time estimates\n",
-    "        classical_years = 2 ** (key_size / 10) / (10 ** 9)  # Rough estimate\n",
-    "        quantum_hours = (key_size ** 2) / 1000  # Very rough estimate\n",
-    "        \n",
-    "        print(f\"\\\\n[*] Breaking Time Estimates:\")\n",
-    "        print(f\"    Classical computer: ~{classical_years:.0e} years\")\n",
-    "        print(f\"    Quantum computer: ~{quantum_hours:.1f} hours (with sufficient qubits)\")\n",
-    "        print(f\"    Speedup factor: ~{classical_years * 8760 / quantum_hours:.2e}x\")\n",
-    "        \n",
-    "        # HNDL threat\n",
-    "        print(f\"\\\\n[!] HARVEST NOW, DECRYPT LATER THREAT:\")\n",
-    "        print(f\"    • This key exchange is vulnerable to retroactive decryption\")\n",
-    "        print(f\"    • Attackers can store encrypted traffic now\")\n",
-    "        print(f\"    • Decrypt later when quantum computers become available\")\n",
-    "        print(f\"    • Current data confidentiality lifetime: {timeline}\")\n",
-    "        \n",
-    "        # Mitigation\n",
-    "        print(f\"\\\\n[] MITIGATION RECOMMENDATIONS:\")\n",
-    "        print(f\"    1. Migrate to Post-Quantum Cryptography (PQC)\")\n",
-    "        print(f\"       • NIST-approved: CRYSTALS-Kyber, CRYSTALS-Dilithium\")\n",
-    "        print(f\"       • Hybrid mode: Use both RSA + PQC during transition\")\n",
-    "        print(f\"    2. Increase key sizes to 4096+ bits (temporary measure)\")\n",
-    "        print(f\"    3. Implement quantum-safe key exchange (e.g., NewHope)\")\n",
-    "        print(f\"    4. Regular key rotation (every 3-6 months)\")\n",
-    "        \n",
-    "    else:\n",
-    "        print(f\"[!] Target uses non-RSA key: {remote_key.get_name()}\")\n",
-    "        print(f\"    Shor's algorithm is specifically optimized for RSA/DH/ECDSA\")\n",
-    "    \n",
-    "    transport.close()\n",
-    "    print(f\"\\\\n[+] Analysis complete!\")\n",
-    "    \n",
-    "except socket.error as e:\n",
-    "    print(f\"[ERROR] Cannot connect to target:22 - {e}\")\n",
-    "    print(f\"[INFO] Make sure houdinis_target container is running\")\n",
-    "    sys.exit(1)\n",
-    "except Exception as e:\n",
-    "    print(f\"[ERROR] {type(e).__name__}: {e}\")\n",
-    "    import traceback\n",
-    "    traceback.print_exc()\n",
-    "    sys.exit(1)\n",
+    "    except socket.error as e:\n",
+    "        print(f\"[ERROR] Cannot connect to target:22 - {e}\")\n",
+    "        print(f\"[INFO] Make sure houdinis_target container is running\")\n",
+    "        sys.exit(1)\n",
+    "    except Exception as e:\n",
+    "        print(f\"[ERROR] {type(e).__name__}: {e}\")\n",
+    "        import traceback\n",
+    "        traceback.print_exc()\n",
+    "        sys.exit(1)\n",
     "\n",
     "EOF\n",
     "\"\"\"\n",
