--- a/notebooks/09-Houdinis_Framework_Conclusion.ipynb
+++ b/notebooks/09-Houdinis_Framework_Conclusion.ipynb
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "1e2c5d4b",
    "metadata": {},
    "outputs": [
@@ -123,6 +123,8 @@
     "from datetime import datetime\n",
     "import glob\n",
     "from typing import Dict, List, Tuple\n",
+    "import time\n",
+    "from tqdm import tqdm\n",
     "\n",
     "# Try to import all Houdinis modules to verify completeness\n",
     "framework_modules = {\n",
@@ -134,56 +136,67 @@
     "    'Educational Notebooks': []\n",
     "}\n",
     "\n",
-    "try:\n",
-    "    # Core modules\n",
-    "    from core.cli import QuantumCLI\n",
-    "    from core.session import QuantumSession\n",
-    "    from core.modules import ModuleManager\n",
-    "    framework_modules['Core Framework'].extend(['CLI', 'Session', 'Modules'])\n",
-    "except ImportError as e:\n",
-    "    print(f\" Core module import issue: {e}\")\n",
+    "print(\" Importing and verifying Houdinis framework modules...\")\n",
     "\n",
-    "try:\n",
-    "    # Quantum exploits\n",
-    "    from exploits.rsa_shor import RSAShorExploit\n",
-    "    from exploits.grover_bruteforce import GroverBruteforce\n",
-    "    from exploits.quantum_network_recon import QuantumNetworkRecon\n",
-    "    framework_modules['Quantum Exploits'].extend(['RSA Shor', 'Grover Bruteforce', 'Network Recon'])\n",
-    "except ImportError as e:\n",
-    "    print(f\" Exploit module import issue: {e}\")\n",
-    "\n",
-    "try:\n",
-    "    # Scanner modules\n",
-    "    from scanners.quantum_vuln_scanner import QuantumVulnScanner\n",
-    "    from scanners.network_scanner import NetworkScanner\n",
-    "    framework_modules['Network Scanners'].extend(['Quantum Vuln Scanner', 'Network Scanner'])\n",
-    "except ImportError as e:\n",
-    "    print(f\" Scanner module import issue: {e}\")\n",
-    "\n",
-    "try:\n",
-    "    # Quantum backend\n",
-    "    from quantum.backend import QuantumBackend\n",
-    "    from quantum.simulator import QuantumSimulator\n",
-    "    framework_modules['Quantum Backend'].extend(['Backend', 'Simulator'])\n",
-    "except ImportError as e:\n",
-    "    print(f\" Quantum backend import issue: {e}\")\n",
-    "\n",
-    "try:\n",
-    "    # Utility modules\n",
-    "    from utils.banner import show_banner\n",
-    "    from auxiliary.quantum_config import QuantumConfig\n",
-    "    framework_modules['Utility Modules'].extend(['Banner', 'Config'])\n",
-    "except ImportError as e:\n",
-    "    print(f\" Utility module import issue: {e}\")\n",
-    "\n",
-    "# Check for educational notebooks\n",
-    "notebook_files = glob.glob('/home/test/Downloads/Projetos/Houdinis/*.ipynb')\n",
-    "framework_modules['Educational Notebooks'] = [os.path.basename(nb).replace('.ipynb', '') for nb in notebook_files]\n",
+    "with tqdm(total=6, desc=\"Loading framework components\", \n",
+    "          bar_format='{l_bar}{bar}| {n_fmt}/{total_fmt} [{elapsed}]') as pbar:\n",
+    "    \n",
+    "    try:\n",
+    "        # Core modules\n",
+    "        from core.cli import QuantumCLI\n",
+    "        from core.session import QuantumSession\n",
+    "        from core.modules import ModuleManager\n",
+    "        framework_modules['Core Framework'].extend(['CLI', 'Session', 'Modules'])\n",
+    "    except ImportError as e:\n",
+    "        print(f\" Core module import issue: {e}\")\n",
+    "    pbar.update(1)\n",
+    "    \n",
+    "    try:\n",
+    "        # Quantum exploits\n",
+    "        from exploits.rsa_shor import RSAShorExploit\n",
+    "        from exploits.grover_bruteforce import GroverBruteforce\n",
+    "        from exploits.quantum_network_recon import QuantumNetworkRecon\n",
+    "        framework_modules['Quantum Exploits'].extend(['RSA Shor', 'Grover Bruteforce', 'Network Recon'])\n",
+    "    except ImportError as e:\n",
+    "        print(f\" Exploit module import issue: {e}\")\n",
+    "    pbar.update(1)\n",
+    "    \n",
+    "    try:\n",
+    "        # Scanner modules\n",
+    "        from scanners.quantum_vuln_scanner import QuantumVulnScanner\n",
+    "        from scanners.network_scanner import NetworkScanner\n",
+    "        framework_modules['Network Scanners'].extend(['Quantum Vuln Scanner', 'Network Scanner'])\n",
+    "    except ImportError as e:\n",
+    "        print(f\" Scanner module import issue: {e}\")\n",
+    "    pbar.update(1)\n",
+    "    \n",
+    "    try:\n",
+    "        # Quantum backend\n",
+    "        from quantum.backend import QuantumBackend\n",
+    "        from quantum.simulator import QuantumSimulator\n",
+    "        framework_modules['Quantum Backend'].extend(['Backend', 'Simulator'])\n",
+    "    except ImportError as e:\n",
+    "        print(f\" Quantum backend import issue: {e}\")\n",
+    "    pbar.update(1)\n",
+    "    \n",
+    "    try:\n",
+    "        # Utility modules\n",
+    "        from utils.banner import show_banner\n",
+    "        from auxiliary.quantum_config import QuantumConfig\n",
+    "        framework_modules['Utility Modules'].extend(['Banner', 'Config'])\n",
+    "    except ImportError as e:\n",
+    "        print(f\" Utility module import issue: {e}\")\n",
+    "    pbar.update(1)\n",
+    "    \n",
+    "    # Check for educational notebooks\n",
+    "    notebook_files = glob.glob('/home/test/Downloads/Projetos/Houdinis/*.ipynb')\n",
+    "    framework_modules['Educational Notebooks'] = [os.path.basename(nb).replace('.ipynb', '') for nb in notebook_files]\n",
+    "    pbar.update(1)\n",
     "\n",
     "# Configuration\n",
     "plt.style.use('dark_background')\n",
     "\n",
-    "print(\" Houdinis Framework Analysis - Final Summary\")\n",
+    "print(\"\\n✓ Houdinis Framework Analysis - Final Summary\")\n",
     "print(f\" Analysis Date: {datetime.now().strftime('%Y-%m-%d %H:%M:%S')}\")\n",
     "print(\"=\" * 70)\n",
     "\n",
